--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^3.1.0",
+    "@types/nodemailer": "^6.4.14",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.3",
